--- a/domManipulation/one.html
+++ b/domManipulation/one.html
@@ -14,6 +14,11 @@
 <body class = "bg-black">
     <div>
         <h1 id="title" class = "heading">Lets learn DOM manipulation</h1>
+        <ul>
+            <li>lorem</li>
+            <li> okkkkkkkkkk </li>
+            <li>jajajaahahhaajaaj</li>
+        </ul>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut in ullam fugiat perferendis autem dolorem suscipit veritatis vero, nemo aspernatur quasi omnis sit itaque. Architecto doloribus temporibus excepturi quisquam voluptate.</p>
     </div>
 </body>
