--- a/domManipulation/one.html
+++ b/domManipulation/one.html
@@ -21,5 +21,8 @@
         </ul>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut in ullam fugiat perferendis autem dolorem suscipit veritatis vero, nemo aspernatur quasi omnis sit itaque. Architecto doloribus temporibus excepturi quisquam voluptate.</p>
     </div>
+    <script>
+        alert('hey there this is an alert')
+    </script>
 </body>
 </html>
