--- a/domManipulation/two.html
+++ b/domManipulation/two.html
@@ -15,6 +15,10 @@
     </div>    
 </body>
 <script>
+    alert('hey there this is an alert')
+    const user = prompt('what is your name','enter your name ')
+    console.log(user)
+    document.write('welcome boi ')
     const parent = document.querySelector('.parent')
     console.log(parent)
     console.log(parent.children)
