--- a/DOMprojects/pingpong.html
+++ b/DOMprojects/pingpong.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .winner{
+            color: green;
+        }
+        .loser{
+            color : red;
+        }
+    </style>
 </head>
 <body>
     <h1><span id = "p1display">0</span> to <span id = 'p2display'>0</span></h1>
@@ -22,8 +30,9 @@
     <button id = "p2button"> +1 player two</button>
     <button id = "reset"> RESET</button>
 
-    <script src = "pingkong.js">
-    </script>
+
+
+    <script src = "pingkong.js"></script>
 
 </body>
 </html>
