--- a/notBasics/changecolor.html
+++ b/notBasics/changecolor.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <script>
+
+        // this is bad way
+        // we learn promise to resolve it 
+        // using async and await
         const body = document.querySelector('body')
         setTimeout(()=>{
             body.style.background = 'red'
