--- a/notBasics/weather.html
+++ b/notBasics/weather.html
@@ -10,6 +10,6 @@
     <input type="text" placeholder="enter city name" id = "city">
     <button id = "searching"> search </button>
     </div>
-    <script src = promise.js></script>
+    <script src = weather.js></script>
 </body>
 </html>
